--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ if you using adblocker this Website doesn't work with adblocker so Disable it pl
       }
 
       const videoElement = document.getElementById("video");
-      videoElement.src = "https://cdn.discordapp.com/attachments/1119740929641816115/1132749252767006790/Don_Toliver_-_No_Idea_Official_Music_Video.mp4";
+      videoElement.src = "https://cdn.discordapp.com/attachments/1182292565903544451/1257341451881418823/Don_Toliver_-_No_Idea_Official_Music_Video.mp4?ex=66840dfa&is=6682bc7a&hm=00e7bfdf2785201a28dd2a5802061a3973906b145dc15578142fb7107594935f&";
       videoElement.style.display = "block";
       videoElement.play();
       setTimeout(displayNextDetail, 17000);
